more easy ref fixes

--- a/finite.tex
+++ b/finite.tex
@@ -198,8 +198,8 @@ While {\CH} and {\FH} are enough to guarantee that \(\context{E}\) and \(\contex
 \begin{definition}\label{FHGivesComodules}
 Let \(A\) and \(\Gamma\) be commutative rings with associated affine schemes \(X_0 = \Spec A\), \(X_1 = \Spec \Gamma\).  A \index{Hopf algebroid}\textit{Hopf algebroid} consists of the pair \((A, \Gamma)\) together with structure maps
 \begin{align*}
-\eta_L \co A & \to \Gamma, & s\co X_1 & \to X_0, \\
-\eta_R \co A & \to \Gamma, & t\co X_1 & \to X_0, \\
+\eta_R \co A & \to \Gamma, & s\co X_1 & \to X_0, \\
+\eta_L \co A & \to \Gamma, & t\co X_1 & \to X_0, \\
 \chi \co \Gamma & \to \Gamma, & (-)^{-1}\co X_1 & \to X_1, \\
 \Delta \co \Gamma & \to \Gamma \presuper{\eta_R}{\underset{A}\otimes}^{\eta_L} \Gamma, & \circ\co X_1 \presuper{t}{\underset{X_0}{\times}}^{s} X_1 & \to X_1,
 \end{align*}
@@ -263,7 +263,7 @@ The algebraic moduli \(\context{MU} = (\Spec MU_*, \Spec MU_* MU)\) and the topo
 If \(E\) is a complex-oriented ring spectrum, then the simplicial sheaf \(\context{MU}(E)\) has an extra degeneracy, which causes the \(MU\)--based Adams spectral sequence for \(E\) to degenerate.  In this sense, the ``stackiness'' of \(\context{MU}(E)\) is exactly a measure of the failure of \(E\) to be orientable.
 \end{remark}
 
-\begin{remark}[{cf.\ \cite[Theorem 1.2.4.1]{LurieHA}, \cite[Section 1]{MillerRelations}}]
+\begin{remark}[{\cite[Section 5]{BousfieldLocalization}, cf.\ also \cite[Theorem 1.2.4.1]{LurieHA}, \cite[Section 1]{MillerRelations}}]
 It is also possible to construct an \(E\)--Adams spectral sequence by iteratively smashing with the fiber sequence \(\overline E \to \S \to E\) to form the tower
 \begin{center}
 \begin{tikzcd}[row sep=1em]
@@ -799,7 +799,7 @@ For the finite perfect fields \(k = \F_{p^d} = \F_p(\zeta_{p^d-1})\), the Witt r
 \end{remark}
 
 \begin{remark}\label{LubinTateModuliThmInFGLTerms}
-In light of \Cref{LubinTateStackInFGLTerms}, we can also state \Cref{LubinTateModuliThm} in terms of formal group laws and their \(\star\)--isomorphisms.  For a group law \(+_\Gamma\) over a perfect field \(k\) of positive characteristic, it claims that there exists a ring \(X\), noncanonically isomorphic to \(\W_p(k)\ps{u_1, \ldots, u_{d-1}}\), as well as a certain group law \(+_{\widetilde \Gamma}\) on this ring.  The group law \(+_{\widetilde \Gamma}\) has the following property: if \(+_\G\) is a formal group law on an infinitesimal thickening \(\Spf R\) of \(\Spec k\) which reduces along \(\pi\co \Spec R/\m \to \Spf R\) to \(+_\Gamma\), then there is a unique ring map \(f\co X \to R\) such that \(f^* (+_{\widetilde \Gamma})\) is \(\star\)--isomorphic to \(+_{\G}\), and this \(\star\)--isomorphism is unique.
+In light of \Cref{LubinTateStackInFGLTerms}, we can also state \Cref{LubinTateModuliThm} in terms of formal group laws and their \(\star\)--isomorphisms.  For a group law \(+_\Gamma\) over a perfect field \(k\) of positive characteristic, it claims that there exists a ring \(X\), noncanonically isomorphic to \(\W_p(k)\ps{u_1, \ldots, u_{d-1}}\), as well as a certain group law \(+_{\widetilde \Gamma}\) on this ring.  The group law \(+_{\widetilde \Gamma}\) has the following property: if \(+_\G\) is a formal group law on an infinitesimal thickening \(\Spf R\) of \(\Spec k\) which reduces along \(\pi\co \Spec R/\m \to \Spf R\) to \(+_\Gamma\), then there is a unique ring map \(f\co X \to R\), compatible with the identifications \(X / \mathfrak{m} \cong k \cong R / \mathfrak{m}\), such that \(f^* (+_{\widetilde \Gamma})\) is \(\star\)--isomorphic to \(+_{\G}\), and this \(\star\)--isomorphism is unique.
 \end{remark}
 
 We will spend the rest of this Lecture working towards a proof of \Cref{LubinTateModuliThm}.  We first consider a very particular sort of infinitesimal thickening: the square-zero extension \(R = k[\eps] / \eps^2\) with pointing \(\eps = 0\).  We are interested in two kinds of data over \(R\): formal group laws \(+_\Delta\) over \(R\) reducing to \(+_\Gamma\) at the pointing, and formal group law automorphisms \(\phi\) of \(+_\Gamma\) which reduce to the identity automorphism at the pointing.
@@ -865,7 +865,7 @@ f & \mapsto \Gamma_1\left(0, \sumGamma_{i=1}^n x_i \right)^{-1} \cdot f(x_1, \ld
 \end{align*}
 \end{lemma}
 
-Two Lectures ago while proving \Cref{Symmetric2CocycleLemma}, we computed the cohomology of this complex in the specific case of \(\G = \G_a\).  This is the one case where Lubin and Tate's theorem does \emph{not} apply, since it requires \(\height \G < \infty\).  Nonetheless, by filtering the multiplication on \(\G\) by degree, we can use this specific calculation to get up to the one we now seek.
+In the course of proving \Cref{Symmetric2CocycleLemma}, we computed the cohomology of this complex in the specific case of \(\G = \G_a\).  This is the one case where Lubin and Tate's theorem does \emph{not} apply, since it requires \(\height \G < \infty\).  Nonetheless, by filtering the multiplication on \(\G\) by degree, we can use this specific calculation to get up to the one we now seek.
 
 \begin{lemma}\label{CalculationOfLTTangentSpace}
 Let \(\G\) be a formal group of finite height \(d\) over a field \(k\).  Then \(H^1(\G; \G_a) = 0\) and \(H^2(\G; \G_a)\) is a free \(k\)--vector space of dimension \(d\).\index{formal group!cohomology}
@@ -961,7 +961,7 @@ The first statement is the inductive hypothesis, and the second statement follow
 \end{proof}
 
 \begin{remark}
-This construction always gives an \(MUP\)--module spectrum in the homotopy category.  If \(\sheaf F\) comes from the pushforward of the ring of functions along a flat map \(\Spec R \to \moduli{fg}\), then the resulting spectrum is a ring spectrum, and flat sheaves on it become module spectra over this ring spectrum.
+This construction always gives an \(MUP\)--module spectrum in the homotopy category.  If \(\sheaf F\) comes from the pushforward of the ring of functions along a flat map \(\Spec R \to \moduli{fg}\), then the resulting spectrum is a ring spectrum~\cite[Theorem 2.8]{HoveyStrickland}, and flat sheaves on it become module spectra over this ring spectrum.
 \end{remark}
 
 \begin{remark}[{\cite[Equation 20.1]{HopkinsCOCTALOS}}]\label{PullingBackOverMfgVsMfgl}
@@ -998,7 +998,7 @@ This determines a spectrum \(K_\Gamma = E_\Gamma / I_d\), and hence determines a
 The trailing ``\(P\)'' in some of these names is to disambiguate them from similar less-periodic objects in the literature.  Other authors often prefer to take \(BP\) to be a minimal wedge summand of \(MU_{(p)}\) and to take the spectra \(E(d)\) and \(K(d)\) to be \(2(p^d-1)\)--periodic (for heights \(0 < d < \infty\)).  On the other hand, the spectra \(E_\Gamma\) and \(K_\Gamma\) are \emph{usually} taken to be \(2\)--periodic already.  Since we are nearly exclusively interested in \(2\)--periodic spectra, we append a ``\(P\)'' to the names of the former spectra, but not to \(E_\Gamma\) or \(K_\Gamma\).
 \end{remark}
 
-\begin{example}[{cf.\ \Cref{CPinftyKUExample}}]\label{ExampleOfMoravasTheoriesAtGm}
+\begin{example}[{\cite{ConnerFloyd}, cf.\ \Cref{CPinftyKUExample}}]\label{ExampleOfMoravasTheoriesAtGm}
 In the case \(\Gamma = \G_m\) over \(k = \F_p\), the resulting spectra are connected to complex \(K\)--theory:
 \begin{align*}
 E_{\G_m} & \cong KU^\wedge_p, &
@@ -1067,8 +1067,8 @@ In the other direction, suppose that for every \(d\) we have \(K(d)_* E \ne 0\).
 A nontrivial result of Johnson and Wilson shows that the following conditions are equivalent:
 \begin{enumerate}
     \item \(MU_* X = 0\) holds.
-    \item For any \(d < \infty\), \(K([0, d])_* X = 0\) and \(P(d+1)_* X = 0\) hold.\footnote{It is immediate that \(MU_* X = 0\) forces \(P(d+1)_* X = 0\) and \(v_{d'}^{-1} P(d')_*(X) = 0\) for all \(d' < d\).  What's nontrivial is showing that \(v_{d'}^{-1} P(d')_*(X) = 0\) if and only if \(K(d')_*(X) = 0\)~\cite[Theorem 2.1.a]{RavenelLocalizationWRTPeriodic},~\cite[Section 3]{JohnsonWilson}.}
-    \item There exists a \(d < \infty\) such that \(K([0, d])_* X = 0\) and \(P(d+1)_* X = 0\) hold.
+    \item For any \(d < \infty\), \(\bigvee_{j=0}^d K(j)_* X = 0\) and \(P(d+1)_* X = 0\) hold.\footnote{It is immediate that \(MU_* X = 0\) forces \(P(d+1)_* X = 0\) and \(v_{d'}^{-1} P(d')_*(X) = 0\) for all \(d' < d\).  What's nontrivial is showing that \(v_{d'}^{-1} P(d')_*(X) = 0\) if and only if \(K(d')_*(X) = 0\)~\cite[Theorem 2.1.a]{RavenelLocalizationWRTPeriodic},~\cite[Section 3]{JohnsonWilson}.}
+    \item There exists a \(d < \infty\) such that \(\bigvee_{j=0}^d K(j)_* X = 0\) and \(P(d+1)_* X = 0\) hold.
 \end{enumerate}
 Taking \(X = R[\alpha^{-1}]\), we have assumed that \(K([0, d])_* X = 0\), but we have not made a direct assumption on \(P(d+1)_* X\).  However, we have \[\colim_d P(d+1) \simeq \HFp \simeq K(\infty),\] and we have assumed \(\S \to K(\infty) \sm R[\alpha^{-1}]\) to be null.  By compactness of \(\S\), that null-homotopy factors through some finite stage \(P(d+1) \sm R[\alpha^{-1}]\) for \(d \gg 0\).
 \end{proof}
@@ -1099,16 +1099,12 @@ In service of \Cref{ExampleOfMoravasTheoriesAtGm}, the geometric definition of \
 We're now well-situated to address Ravenel's question about finite spectra and periodic self-maps.  The key observation is that spectra admitting such self-maps are closed under some natural operations, leading to the following definition:
 
 \begin{definition}
-A full subcategory of a triangulated category (e.g., the homotopy category of \(p\)--local finite spectra) is \index{thick subcategory}\textit{thick} if\ldots
-\begin{itemize}
-\item \ldots it is closed under isomorphisms and retracts.
-\item \ldots it has a \(2\)-out-of-\(3\) property for cofiber sequences.
-\end{itemize}
+A full subcategory of a triangulated category (e.g., the homotopy category of \(p\)--local finite spectra) is \index{thick subcategory}\textit{thick} if it is closed under isomorphisms and retracts and it has a \(2\)-out-of-\(3\) property for cofiber sequences.
 \end{definition}
 
 \noindent Examples of thick subcategories include:
 \begin{itemize}
-\item The category \(\CatOf{C}_d\) of \(p\)--local finite spectra which are \(K(d-1)\)--acyclic.  (For instance, if \(d = 1\), the condition of \(K(0)\)--acyclicity is that the spectrum have purely torsion homotopy groups.)  These are called ``finite spectra of type at least \(d\)''.
+\item The category \(\CatOf{C}_d\) of \(p\)--local finite spectra which are \(K(d-1)\)--acyclic.\footnote{For instance, \(K(0)\)--acyclicity means that the homotopy groups of the spectrum are torsion.}  These are called ``finite spectra of type at least \(d\)''.
 \item The category \(\CatOf{D}_d\) of \(p\)--local finite spectra \(F\) for which there is a self-map \(v: \Susp^N F \to F\), \(N \gg 0\) which induces multiplication by a unit in \(K(d)\)--homology and which is nilpotent in \(K(\ne d)\)--homology.  These are called ``finite spectra admitting \index{vd self map@\(v_d\)--self--map}\(v_d\)--self--maps''.\footnote{It is not obvious that \(\CatOf D_d\) satisfies the cofiber extension axiom of a thick subcategory.  One is required to show that for any map $f\co X \to Y$ of finite complexes of type \(d\), \(v_d\)--self--maps can be chosen on both $X$ and $Y$ which commute with $f$, which is another theorem of Hopkins and Smith~\cite[Theorem 11, Section 3]{HopkinsSmith}.}
 \end{itemize}
 
@@ -1206,7 +1202,7 @@ The functor \[\context{MU}(-)\co \CatOf{Spectra}^{\fin} \to \CatOf{Coh}(\context
 
 The construction as we have described it falls short of completely recovering \(\Spec R\), as we have constructed only a topological space rather than a locally ringed space (or anything otherwise equipped locally with algebraic data, as in our functor of points perspective).  The approach taken by Balmer~\cite[Section 6]{Balmer} is to use Tannakian reconstruction to extract a structure sheaf of local rings from the prime \(\otimes\)--ideal subcategories.  We, however, are at least as interested in finite spectra as we are the ring spectrum \(\S\), so we will take an approach that emphasizes module categories rather than local rings.  Specifically, Bousfield's theory of \index{Bousfield localization}homological localization allows us to lift the localization structure among open substacks of \(\moduli{fg}\) to the category \(\CatOf{Spectra}\) as follows:
 
-\begin{theorem}[{Bousfield localzation, \cite{BousfieldLocalization}, \cite[Theorem 7.7]{Margolis}}]\label{BousfieldLocalizationThm}
+\begin{theorem}[{Bousfield localization, \cite{BousfieldLocalization}, \cite[Theorem 7.7]{Margolis}}]\label{BousfieldLocalizationThm}
 Let \(j\co \Spec R \to \moduli{fg}\) be a flat map, and let \(R_*\) denote the homology theory associated to it by \Cref{LandwebersStackyTheorem}.  There is then a diagram
 \begin{center}
 \begin{tikzcd}[column sep=2.2cm,row sep=2cm]
@@ -1243,7 +1239,7 @@ L_d X & \simeq (L_d \S) \sm X, &
 \end{align*}
 \end{lemma}
 \begin{proof}[Analogy to \(j_* \vdash j^*\)]
-The first formula stems from \(j\) an open inclusion, which has \(j^* M \simeq R \otimes M\) in the algebraic setting.  The second formula can be compared to the inclusion \(j\) of the formal infinitesimal neighborhood of a closed subscheme, which has algebraic model \(j^* M = \lim_j (R/I^j \otimes M)\).\footnote{In keeping with our discussion of continuous Morava \(E\)--theory, it is also possible to consider the object \(\{\left( M_0(v^I) \sm L_d X \right)\}_I\) itself as a pro-spectrum.  This is interesting to explore: Davis and Lawson have shown that setting \(X = \S\) gives an \(E_\infty\)--ring pro-spectrum, even though none of the individual objects are \(E_\infty\)--ring spectra themselves~\cite{DavisLawson}.}
+The first formula stems from \(j\) an open inclusion, which has \(j^* M \simeq R \otimes M\) in the algebraic setting.  The second formula can be compared to the inclusion \(j\) of the formal infinitesimal neighborhood of a closed subscheme, which has algebraic model \(j^* M = \lim_j (R/I^j \otimes M)\).\footnote{In keeping with our discussion of continuous Morava \(E\)--theory, it is also possible to consider the object \(\{\left( M_0(v^I) \sm L_d X \right)\}_I\) itself as a pro-spectrum.  This is interesting to explore: Davis and Lawson have shown that setting \(X = \S\) gives an \(E_\infty\)--ring pro-spectrum~\cite{DavisLawson}, even though none of the individual objects are \(E_\infty\)--ring spectra themselves~\cite{MNN}.}
 \end{proof}
 
 \begin{lemma}\label{StableMixedKthyCoopnsVanish}
@@ -1300,13 +1296,13 @@ The homotopy limit of the tower \[\cdots \to L_d F \to L_{d-1} F \to \cdots \to 
 In addition to furthering the analogy, \Cref{ChromaticConvergence} suggests a method for analyzing the homotopy groups of spheres: we could study the homotopy groups of each \(L_d \S\) and perform the reassembly process encoded by this inverse limit.  Additionally, \Cref{ChromaticFractureSquares} shows that this process is inductive: \(L_d \S\) can be understood in terms of the spectrum \(L_{d-1} \S\), the spectrum \(\widehat L_d \S\), and some gluing data in the form of \(L_{d-1} \widehat L_d \S\).  Hence, we become interested in the homotopy of \(\widehat L_d \S\), which is the target of the \(E_d\)--Adams spectral sequence considered in \Cref{StableContextLecture}.
 
 \begin{theorem}[{\Cref{IdentifyingAdamsE2Page} and \Cref{DefnChromaticHomologyThys}, see also \Cref{Pi2AndInvariantDiffls}, \Cref{DefnOfNilpCompletionAndASS}, and \Cref{FHGivesComodules}}]\label{ASSForLKdS}
-The \(E_d\)--based\index{Bockstein}\footnote{Although the \(K(d)\)--Adams spectral sequence more obviously targets \(\widehat L_d \S\), we have chosen to analyze the \(E_d\)--Adams spectral sequence above because \(K(d)\) fails to satisfy {\CH}.  Starting with \(BPP_0 BPP \cong BPP_0[t_0^{\pm}, t_1, t_2, \ldots]\) from \Cref{DefnChromaticHomologyThys} and \Cref{IdIsAnInvariantIdeal}, we can calculate \(E(d)P_0 E(d)P\) by base-changing this Hopf algebroid: \(E(d)P_0 E(d)P = E(d)P_0 \otimes_{BPP_0} BPP_0 BPP \otimes_{BPP_0} E(d)P_0\), which is again free over \(E(d)P_0\).  Since \(K(d)P\) is formed from \(E(d)P\) by quotienting by a regular sequence, we calculate that \(K(d)P_0 E(d)P\) is free over \(K(d)P_0\), generated by the same summands.  However, when quotienting by the regular sequence \emph{again} to form \(K(d)P_* K(d)P\), the maps in the quotient sequences act by elements in \(I_d = 0\), hence introduce Bocksteins.  The end result is \[K(d)P_* K(d)P = \left(K(d)P_* \otimes_{BPP_*} BPP_* BPP \otimes_{BPP_*} K(d)P_*\right) \otimes \Lambda[\tau_0, \ldots, \tau_{d-1}],\] where \(\tau_j\) in degree \(1\) controls the cofiber of \(E_d \xrightarrow{u_j} E_d\).  In this sense, \(E_d\) forms a kind of maximal deformation of \(K(d)P\) as a ring spectrum, since it exhausts the collection of \(K(d)P\) Bocksteins.  Additionally, this behavior of odd-degree classes is quite generic: whenever odd-primary information appears near the formal geometric picture, it seems to come from a poorly behaved homotopical quotient---some element was killed twice, say, or in some specific case a map was zero but is generically nonzero.  So it is here.}\footnote{Baas and Madsen have calculated \(H\F_p^*(K(n)[0, \infty)) \cong \mathcal A^* \mmod \Lambda[Q_n]\), which also fits with this Bockstein philosophy (cf.\ also \Cref{kOASSExample})~\cite{BaasMadsen}, \cite[Proposition 4.9]{HopkinsSmith}.} Adams spectral sequence for the sphere converges strongly to \(\pi_* \widehat L_d \S\).  Writing \(\omega\) for the line bundle on \((\moduli{fg})^\wedge_{\Gamma_d}\) of invariant differentials, we have
+The continuous \(E_d\)--based\index{Bockstein}\footnote{Although the \(K(d)\)--Adams spectral sequence more obviously targets \(\widehat L_d \S\), we have chosen to analyze the \(E_d\)--Adams spectral sequence above because \(K(d)\) fails to satisfy {\CH}.  Starting with \(BPP_0 BPP \cong BPP_0[t_0^{\pm}, t_1, t_2, \ldots]\) from \Cref{DefnChromaticHomologyThys} and \Cref{IdIsAnInvariantIdeal}, we can calculate \(E(d)P_0 E(d)P\) by base-changing this Hopf algebroid: \(E(d)P_0 E(d)P = E(d)P_0 \otimes_{BPP_0} BPP_0 BPP \otimes_{BPP_0} E(d)P_0\), which is again free over \(E(d)P_0\).  Since \(K(d)P\) is formed from \(E(d)P\) by quotienting by a regular sequence, we calculate that \(K(d)P_0 E(d)P\) is free over \(K(d)P_0\), generated by the same summands.  However, when quotienting by the regular sequence \emph{again} to form \(K(d)P_* K(d)P\), the maps in the quotient sequences act by elements in \(I_d = 0\), hence introduce Bocksteins.  The end result is \[K(d)P_* K(d)P = \left(K(d)P_* \otimes_{BPP_*} BPP_* BPP \otimes_{BPP_*} K(d)P_*\right) \otimes \Lambda[\tau_0, \ldots, \tau_{d-1}],\] where \(\tau_j\) in degree \(1\) controls the cofiber of \(E_d \xrightarrow{u_j} E_d\).  In this sense, \(E_d\) forms a kind of maximal deformation of \(K(d)P\) as a ring spectrum, since it exhausts the collection of \(K(d)P\) Bocksteins.  Additionally, this behavior of odd-degree classes is quite generic: whenever odd-primary information appears near the formal geometric picture, it seems to come from a poorly behaved homotopical quotient---some element was killed twice, say, or in some specific case a map was zero but is generically nonzero.  So it is here.}\footnote{Baas and Madsen have calculated \(H\F_p^*(K(n)[0, \infty)) \cong \mathcal A^* \mmod \Lambda[Q_n]\), which also fits with this Bockstein philosophy (cf.\ also \Cref{kOASSExample})~\cite{BaasMadsen}, \cite[Proposition 4.9]{HopkinsSmith}.} Adams spectral sequence for the sphere converges strongly to \(\pi_* \widehat L_d \S\).  Writing \(\omega\) for the line bundle on \((\moduli{fg})^\wedge_{\Gamma_d}\) of invariant differentials, we have
 \[\pushQED{\qed}
 E_2^{*, *} = H^*((\moduli{fg})^\wedge_{\Gamma_d}; \omega^{\otimes *}) \Rightarrow \pi_* \widehat L_d \S. \qedhere
 \popQED\]
 \end{theorem}
 
-\noindent Our algebraic analysis from \Cref{LubinTateModuliThm} and \Cref{LubinTateModuliThmInFGLTerms} shows a further identification \[\context{E_d} = \left( \moduli{fg} \right)^\wedge_{\Gamma_d} \simeq \widehat{\mathbb A}^{d-1}_{\mathbb W(k)} \mmod \InternalAut(\Gamma_d).\]  This computation is thus boiled down to a calculation of the cohomology of the \(\Aut(\Gamma_d)\)--representations arising via \Cref{ActionBySnLiftsToLTn} as the global sections of the sheaves \(\omega^{\otimes *}\) (cf.\ the discussion in \Cref{HopfAlgebrasFromFiniteGroups} and \Cref{HF2HomologyIsValuedInAutGaEquivarModules}).\footnote{In fact, the stable \emph{operations} of \(E_d\) form the twisted group-ring \(E_d^0 E_d = E_d^0\<\!\<\Aut(\Gamma_d)\>\!\>\).}  We will later deduce the following polite description of \(\Aut \Gamma_d\):
+\noindent Our algebraic analysis from \Cref{LubinTateModuliThm} and \Cref{LubinTateModuliThmInFGLTerms} shows a further identification \[\context{E_d} = \left( \moduli{fg} \right)^\wedge_{\Gamma_d} \simeq \widehat{\mathbb A}^{d-1}_{\mathbb W(k)} \mmod \InternalAut(\Gamma_d).\]  This computation is thus boiled down to a calculation of the cohomology of the \(\Aut(\Gamma_d)\)--representations arising via \Cref{ActionBySnLiftsToLTn} as the global sections of the sheaves \(\omega^{\otimes *}\) (cf.\ the discussion in \Cref{HopfAlgebrasFromFiniteGroups} and \Cref{HF2HomologyIsValuedInAutGaEquivarModules}).\footnote{A description of the \emph{multiplicative} stable operations of \(E_d\) can be found in \cite[Proposition 4]{StricklandGHDuality}, as well as most of a description of the collection of \emph{all} stable operations as a twisted group-ring.}  We will later deduce the following polite description of \(\Aut \Gamma_d\):
 \begin{theorem}[{cf.\ \Cref{FormOfStabilizerGroup}}]\label{FormOfStabilizerGroupEarly}
 \index{Lubin Tate stack@Lubin--Tate stack!stabilizer}For \(\Gamma_d\) the Honda formal group law of height \(d\) over a perfect field \(k\) of positive characteristic \(p\), we compute \[\Aut \Gamma_d \cong \left( \W_p(k) \<S\> \middle/ \left( \begin{array}{c} Sw = w^\phi S, \\ S^d = p \end{array} \right) \right)^\times,\] where \(\phi\) denotes a lift of the Frobenius from \(k\) to \(\W_p(k)\). \qed
 \end{theorem}
@@ -1376,7 +1372,7 @@ Take \(k\) to be a perfect field of positive characteristic \(p\), and take \(\G
 \end{center}
 At odd primes, this turns out to be the \(v_1\)--self-map \(v\co M_{2(p-1)}(p) \to M_0(p)\) announced in \Cref{AdamsSelfMapThm} (cf.\ also \cite[Proposition 12.7]{AdamsJXIV}).\index{vd self map@\(v_d\)--self--map}
 
-This admits many generalizations.  First, different powers \(v_1^j\) of the section \(v_1\) also give rise to homotopy elements \(\alpha_{j/1} \in \pi_{2(p-1)j} M_0(p)\).  These have varying orders of divisibility, and we write \(\alpha_{j/k}\) for the element of \(\pi_* \S\) satisfying \(p^{k-1} \alpha_{j/k} = \alpha_{j/1}\).  Additionally, each Moore spectrum supports an Adams \(v_1\)--self--map of the form \[v(p^j) \co M_{|v_1| p^{j-1}}(p^j) \to M_0(p^j),\] which collectively form commutative diagrams of the shape
+This admits many generalizations.  First, different powers \(v_1^j\) of the section \(v_1\) also give rise to homotopy elements \(\alpha_{j/1} \in \pi_{2(p-1)j} M_0(p)\).  These have varying orders of divisibility, and we write \(\alpha_{j/k}\) for an element of \(\pi_* \S\) satisfying \(p^{k-1} \alpha_{j/k} = \alpha_{j/1}\).\footnote{The incarnation of these elements in \(\G_m\)--local homotopy are exactly the elements witnessed by the invariant function \(u^{2(p-1)k}\) in \Cref{piLK1SExample}.}  Additionally, each Moore spectrum supports an Adams \(v_1\)--self--map of the form \[v(p^j) \co M_{|v_1| p^{j-1}}(p^j) \to M_0(p^j),\] which collectively form commutative diagrams of the shape
 \begin{center}
 \begin{tikzcd}[row sep=1.2em]
 M_{p \cdot |v_1| p^{j-1}}(p^j) \arrow["v(p^j)^p"]{r} \arrow{d} & M_0(p^j) \arrow{d} \\
@@ -1387,7 +1383,7 @@ The other invariant functions described in \Cref{IdIsAnInvariantIdeal} (e.g., \(
 \end{example}
 
 \begin{remark}\label{GreekLetterElements}
-In the broader literature, the phrase ``Greek letter elements'' typically refers to the pushforward of the above elements to the homotopy groups of \(\S\) by pinching to the top cell.  This is somewhat obscuring: for instance, this significantly entangles how multiplication by \(\alpha_{j/k}\) behaves.  Finally, the incarnation of these elements in \(\G_m\)--local homotopy are exactly the elements witnessed by the invariant function \(u^{2(p-1)k}\) in \Cref{piLK1SExample}.
+In the broader literature, the phrase ``Greek letter elements'' typically refers to the pushforward of the above elements to the homotopy groups of \(\S\) by pinching to the top cell.  This is somewhat obscuring: for instance, this significantly entangles how multiplication by \(\alpha_{j/k}\) behaves.
 \end{remark}
 
 \begin{remark}[{\cite{AdamsAtiyah}, \cite[Section 5.2]{RavenelGreenBook}}]
