--- a/main.bib
+++ b/main.bib
@@ -2679,6 +2679,19 @@ MRREVIEWER = {Andrzej Kozlowski},
   publisher={Oxford University Press}
 }
 
+@article{MNN,
+author = {Mathew, Akhil and Naumann, Niko and Noel, Justin},
+title = {On a nilpotence conjecture of J. P. May},
+journal = {Journal of Topology},
+volume = {8},
+number = {4},
+pages = {917-932},
+year = {2015},
+doi = {10.1112/jtopol/jtv021},
+URL = {http://dx.doi.org/10.1112/jtopol/jtv021},
+eprint = {/oup/backfile/content_public/journal/jtopol/8/4/10.1112/jtopol/jtv021/2/jtv021.pdf}
+}
+
 @book {Matsumura,
     AUTHOR = {Matsumura, Hideyuki},
      TITLE = {Commutative ring theory},
