easy ref fixes to appendices

--- a/main.bib
+++ b/main.bib
@@ -2641,6 +2641,23 @@ MRREVIEWER = {Donald M. Davis},
        URL = {http://dx.doi.org/10.1016/0040-9383(92)90066-Q},
 }
 
+@article {Mandell,
+    AUTHOR = {Mandell, Michael A.},
+     TITLE = {{$E_\infty$} algebras and {$p$}-adic homotopy theory},
+   JOURNAL = {Topology},
+  FJOURNAL = {Topology. An International Journal of Mathematics},
+    VOLUME = {40},
+      YEAR = {2001},
+    NUMBER = {1},
+     PAGES = {43--94},
+      ISSN = {0040-9383},
+   MRCLASS = {55P15 (55P60)},
+  MRNUMBER = {1791268},
+MRREVIEWER = {Paul G. Goerss},
+       DOI = {10.1016/S0040-9383(99)00053-1},
+       URL = {https://doi.org/10.1016/S0040-9383(99)00053-1},
+}
+
 @article{Manin,
   title={The theory of commutative formal groups over fields of finite characteristic},
   author={Manin, Yu I},
