--- a/unknowns.tex
+++ b/unknowns.tex
@@ -211,7 +211,7 @@ The idea is that these kinds of observations can be used to bundle the behavior 
 \end{center}
 allowing for the easy detection of invertible \(\Gamma_d\)--local spectra.\footnote{There are interesting basic open questions about the behavior of the horizontal map \(\operatorname{Pic}(\CatOf{Spectra}_{\Gamma_d}) \to \operatorname{Pic}(\CatOf{QCoh}((\moduli{fg})^\wedge_{\Gamma_d}))\).  Is it injective?  Is it surjective?  It can be shown to be injective in the case of \(p \gg \operatorname{ht} \Gamma\), and it is known to fail to be injective when \(p\) is small---but then the precise degree to which it fails to be injective becomes of interest.  Picard elements in the kernel of this map are called \textit{exotic}, and they are responsible for rotating differentials in certain Adams spectral sequences with cyclic symmetries.}
 
-There is further hope that the analogy to special values of \(L\)--functions can be strengthened to a precise connection: the orders of the \(\G_m\)--local homotopy groups of the sphere (or, equivalently, the orders of the stable image of \(j\) elements) are controlled by Bernoulli denominators, which also appear as the negative special values of the Riemann \(\zeta\)--function.\footnote{Generalizations of these phenomena (to larger complexes, to the prime \(2\), and to higher heights) are the subject of work in progress by Salch.}\footnote{It would be truly amazing to have an analogue of the Beilinson conjectures in this topological Langlands program.}  This portends to be more than coincidence: the conjectured \(p\)--adic local Langlands correspondence promises a comparison between certain ``nice'' representations of the groups \(\mathit{GL}_d(\Q_p)\), \(\operatorname{Gal}(\overline{\Q_p} / \Q_p)\), and \(\Aut \Gamma_d\) in such a way that the \(L\)--functions naturally associated to each representation are equal across the correspondence.  At \(d = 1\), the relevant spaces of representations are identically equal (and, in particular, the groups \(\Aut \Gamma_1\), \(\mathrm{GL}_1(\Q_p)\), and \(\operatorname{Gal}(\overline{\Q_p} / \Q_p)^{\mathrm{ab}}\) are themselves all equal), and the \(L\)--function associated to the \(\Aut \Gamma_1\)--representation \(E_{\G_m}(\S^0)\) is, indeed, the Riemann \(\zeta\)--function.  It is rather a lot to hope that this correspondence continues at higher heights, but with the current rate of progress on the \(p\)--adic Langlands correspondence (see, e.g., \cite{KnightThesis}) this promises to soon be testable, if not provable.\footnote{An interesting feature of the local Langlands correspondence is that it has \emph{two} geometric instantiations, stemming from the Lubin--Tate moduli of infinite level and from the \emph{Drinfel'd moduli} of infinite height.  Drinfel'd modules, the constituent poits of the Drinfel'd moduli, have the many desirable properties, but among their stranger properties is that they are naturally positive objects---a situation that a modern homotopy theorist essentially never enters.  Any kind of introduction of equicharacteristic algebraic geometry into homotopy theory would be a welcome invitation and possible point of homotopical contact between these two kinds of halves of the local Langlands program.  (One such place this is coming into view is in the ``ultrachromatic program'' of Barthel, Behrens, Schlank, and Stapleton~\cite{BSS}.)}\footnote{In-progress work of Stapleton and collaborators shows that a version of character theory can be used to convert the $E$--cohomology of a space into a sheaf over the Lubin--Tate moduli of infinite level with an intricate action of a certain large matrix group relevant to the Jacquet--Langlands program.}
+There is further hope that the analogy to special values of \(L\)--functions can be strengthened to a precise connection: the orders of the \(\G_m\)--local homotopy groups of the sphere (or, equivalently, the orders of the stable image of \(j\) elements) are controlled by Bernoulli denominators, which also appear as the negative special values of the Riemann \(\zeta\)--function.\footnote{Generalizations of these phenomena (to larger complexes, to the prime \(2\), and to higher heights) are the subject of work in progress by Salch.}\footnote{It would be truly amazing to have an analogue of the Beilinson conjectures in this topological Langlands program.}  This portends to be more than coincidence: the conjectured \(p\)--adic local Langlands correspondence promises a comparison between certain ``nice'' representations of the groups \(\mathit{GL}_d(\Q_p)\), \(\operatorname{Gal}(\overline{\Q_p} / \Q_p)\), and \(\Aut \Gamma_d\) in such a way that the \(L\)--functions naturally associated to each representation are equal across the correspondence.  At \(d = 1\), the relevant spaces of representations are identically equal (and, in particular, the groups \(\Aut \Gamma_1\), \(\mathrm{GL}_1(\Q_p)\), and \(\operatorname{Gal}(\overline{\Q_p} / \Q_p)^{\mathrm{ab}}\) are themselves all equal), and the \(L\)--function associated to the \(\Aut \Gamma_1\)--representation \(E_{\G_m}(\S^0)\) is, indeed, the Riemann \(\zeta\)--function.  It is rather a lot to hope that this correspondence continues at higher heights, but with the current rate of progress on the \(p\)--adic Langlands correspondence (see, e.g., \cite{KnightThesis}) this promises to soon be testable, if not provable.\footnote{An interesting feature of the local Langlands correspondence is that it has \emph{two} geometric instantiations, stemming from the Lubin--Tate moduli of infinite level and from the \emph{Drinfel'd moduli} of infinite height.  Drinfel'd modules, the constituent points of the Drinfel'd moduli, have the many desirable properties, but among their stranger properties is that they are naturally positive objects---a situation that a modern homotopy theorist essentially never enters.  Any kind of introduction of equicharacteristic algebraic geometry into homotopy theory would be a welcome invitation and possible point of homotopical contact between these two kinds of halves of the local Langlands program.  (One such place this is coming into view is in the ``ultrachromatic program'' of Barthel, Behrens, Schlank, and Stapleton~\cite{BSS}.)}\footnote{In-progress work of Stapleton and collaborators shows that a version of character theory can be used to convert the $E$--cohomology of a space into a sheaf over the Lubin--Tate moduli of infinite level with an intricate action of a certain large matrix group relevant to the Jacquet--Langlands program.}
 
 
 
@@ -299,7 +299,7 @@ In a more topological direction, one wonders to what extent it is critical to us
 
 As indicated in the introduction to \Cref{PowerOpnsChapter}, the algebraic geometry of \(E_\infty\)--ring spectra is still very much in flux, and accordingly there are a lot of interesting open questions about their interaction with the story presented here.
 
-One of the most obvious ones, almost directly cribbed out of \Cref{ConstructionOfTMFSection}, is whether \(\moduli{fg}\) itself admits a topological enrichment~\cite{GoerssRealizingFamilies}.  This question is quite flexible: varying the Grothendieck topology chosen on \(\moduli{fg}\) will almost certainly affect the positivity of the answer, and there are versions of the question that apply to \(E_\infty\) rings, \(A_\infty\) rings, or just spectra.  Still, even admitting the existence of a huge family of implicit questions, very little is known.  On the looser end, we do not have an example of a formal group that cannot arise as the formal group associated to a complex-orientable cohomology theory.  If we had such an example of a prohibited formal group, then if the selecting map \(\Spec R_0 \to \moduli{fg}\) were furthermore---for example---flat, then we could conclude that there cannot exist a topological enrichment of the flat site.  We do have one rather extreme example: one cannot adjoin \(p\){\th} roots to \(E_\infty\)--rings~\cite{SchwaenzlRolandVogt,Devalapurkar}, from which it follows that certain forms of \(K\)--theory do not have \(E_\infty\) structures, and hence the fpqc site of \(\moduli{fg}\) does not admit a topological enrichment with a sheaf of \(E_\infty\)--rings.  A recent result of Lawson also shows that \(BP\) does \emph{not} admit an \(E_\infty\) structure---at least at \(p = 2\), and an extension of his techniques to odd primes yield similar results in that setting~\cite{LawsonSecondaryPowerOps,Senger}.  This doesn't yield any information over what the above example of \(KU[\zeta_p]\) shows, but it is worth pointing out that May asked the question of whether \(BP\) admits an \(E_\infty\) structure over three decades prior~\cite{MayProblemsInLoopspaceTheory} (and it has had a long and storied intervening history), and the delay in its resolution is some indication of the difficulty of this problem.  Some other richer stacks than \(\moduli{fg}\) are known not to admit enrichment: for instance, for this same reason it follows that there cannot exist a topological enrichment of the moduli of (almost any piece of) formal groups equipped with level--\(p\) structures,\footnote{In particular, this appears to inhibit us from producing a spectrum embodying the Lubin--Tate tower at infinite level, which is a bummer from the perspective of the local Langlands program discussed above.} and Lawson has shown that there cannot exist spectra associated to certain stacks of formal \(A\)--modules~\cite{LawsonRealizability}.  Meanwhile, other nearby stacks do admit enrichments: there are spectra \(\TAF\), an abbreviation for ``topological automorphic forms'', which generalize \(\TMF\)~\cite{BehrensLawson}.
+One of the most obvious ones, almost directly cribbed out of \Cref{ConstructionOfTMFSection}, is whether \(\moduli{fg}\) itself admits a topological enrichment~\cite{GoerssRealizingFamilies}.  This question is quite flexible: varying the Grothendieck topology chosen on \(\moduli{fg}\) will almost certainly affect the positivity of the answer, and there are versions of the question that apply to \(E_\infty\) rings, \(A_\infty\) rings, or just spectra.  Still, even admitting the existence of a huge family of implicit questions, very little is known.  On the looser end, we do not have an example of a formal group that cannot arise as the formal group associated to a complex-orientable cohomology theory.  If we had such an example of a prohibited formal group, then if the selecting map \(\Spec R_0 \to \moduli{fg}\) were furthermore---for example---flat, then we could conclude that there cannot exist a topological enrichment of the flat site.  We do have one rather extreme example: one cannot adjoin \(p\){\th} roots to \(E_\infty\)--rings~\cite{SchwaenzlRolandVogt,Devalapurkar}, from which it follows that certain forms of \(K\)--theory do not have \(E_\infty\) structures, and hence the fpqc site of \(\moduli{fg}\) does not admit a topological enrichment with a sheaf of \(E_\infty\)--rings.  A recent result of Lawson also shows that \(BP\) does \emph{not} admit an \(E_\infty\) structure---at least at \(p = 2\), and an extension of his techniques to odd primes yield similar results in that setting~\cite{LawsonSecondaryPowerOps,Senger}.  This doesn't yield any information over what the above example of \(KU[\zeta_p]\) shows, but it is worth pointing out that May asked the question of whether \(BP\) admits an \(E_\infty\) structure over four decades prior~\cite{MayProblemsInLoopspaceTheory} (and it has had a long and storied intervening history), and the delay in its resolution is some indication of the difficulty of this problem.  Some other richer stacks than \(\moduli{fg}\) are known not to admit enrichment: for instance, for this same reason it follows that there cannot exist a topological enrichment of the moduli of (almost any piece of) formal groups equipped with level--\(p\) structures,\footnote{In particular, this appears to inhibit us from producing a spectrum embodying the Lubin--Tate tower at infinite level, which is a bummer from the perspective of the local Langlands program discussed above.} and Lawson has shown that there cannot exist spectra associated to certain stacks of formal \(A\)--modules~\cite{LawsonRealizability}.  Meanwhile, other nearby stacks do admit enrichments: there are spectra \(\TAF\), an abbreviation for ``topological automorphic forms'', which generalize \(\TMF\)~\cite{BehrensLawson}.
 
 Meanwhile, even though we know that the spectrum \(E_\Gamma\) admits an \(E_\infty\)--ring structure, and despite our analysis of \Cref{PowerOpnsSection}, it is not known whether there is an \(E_\infty\)--orientation.  This question has received plenty of attention: most recently, Hopkins and Lawson have produced a spectral sequence computing the space of such maps, the first differential of which encodes the norm coherence condition of \Cref{PowerOpnsSection}~\cite{HopkinsLawson}.  Their work organizes a process that is manually understandable at low heights: the natural map \(\mathbb P(\Susp^{-2} \CP^\infty) \to MU\) is a rational isomorphism of \(E_\infty\)--rings, but at height \(1\) it is not, essentially because the collection of power operations for \(\G_m\)--local \(E_\infty\)--rings acts freely on the source but not on the target.  This can be corrected for with a single rationally-acyclic term, altogether begetting a two-term free resolution of \(MU\) as an \(L_1\)--local \(E_\infty\)--ring spectrum.  Again, this resolution is insufficient when localized at \(\Gamma_2\), and the process continues ad infinitum as in the Hopkins--Lawson paper.  Understanding this spectral sequence even in the height \(2\) case, as specialized to \(E_{\Gamma_2}\), would be an extremely interesting exercise, as it would illuminate the single extra condition at height \(2\) needed to enrich a norm coherent orientation to an \(E_\infty\)--orientation.
 
