--- a/quillen.tex
+++ b/quillen.tex
@@ -615,7 +615,7 @@ with \(|\xi_j| = 2p^j-2\) and \(|\tau_j| = 2p^j - 1\). \qed
 Because of this, we will not feel any guilt for taking a completely alternative approach to this calculation.  This other method, due to Quillen, has as its keystone a completely different kind of cohomology operation called a \index{power operation}\textit{power operation}.  These operations are quite technical to describe, but at their core is taking the \(n\){\th} power of a cohomology class---and hence they have a frustrating lack of properties, including failures to be additive and to be stable.  Our goal in this Lecture is just to define these cohomology operations, specialized to the particular setting we will need for Quillen's proof.  We will accomplish this as early as \Cref{PowerOpnsForSubgroupsToo}, and though we proceed from there to sketch how Quillen's methods belong to a general framework, the reader should not hesitate to continue on to \Cref{StabilizingTheMUSteenrodOps} when they grow bored, assured that the discussion of ``Tate power operations'' will not resurface.  Additionally, unlike with Steenrod squares, the algebro-geometric interpretation of these operations will not be immediately accessible to us, and indeed their eventual reinterpretation in these terms is one of the more hard-won pursuits in this area of mathematics---the curious reader will have to wait until \Cref{PowerOpnsSection}.
 
 Power operations arise not just from taking the \(n\){\th} power of a cohomology class but from also remarking on the natural symmetry of that operation.  We record this symmetry using the following technical apparatus:
-\begin{lemma}[{\cite[Examples 6.1.4.2 and 6.1.6.2]{LurieHA}}]
+\begin{lemma}[{\cite[Theorem 1.6]{EKMM}, \cite[Corollary 2.2.4]{HSS}, \cite[Examples 6.1.4.2 and 6.1.6.2]{LurieHA}}]
 Given a spectrum \(E\), its \(n\)--fold smash power forms a \index{equivariant spectrum}\textit{\(\Sigma_n\)--spectrum}, in the sense that there is a natural diagram \(* \mmod \Sigma_n \to \CatOf{Spectra}\) of \(\infty\)--categories which selects \(E^{\sm n}\) on objects.  In the case of $E = \Susp^\infty X$, this diagram agrees with the permutation diagram \(* \mmod \Sigma_n \to X^{\sm n}\) formed in the \(1\)--category \(\CatOf{Spaces}\). \qed
 \end{lemma}
 
@@ -641,7 +641,7 @@ Cohomology classes \(f \in E^{-q}(X)\) lying in degrees \(q \ne 0\) require more
 \begin{center}
 \begin{tikzcd}
 (\Susp^\infty_+ X)^{\sm n} \arrow{d} \arrow["f^{\sm n}"]{r} & (\S^q \sm E)^{\sm n} \arrow["\mu"]{r} \arrow{d} & \S^{nq} \sm E \\
-(\Susp^\infty_+ X)^{\sm n}_{h\Sigma_n} \arrow["f^{\sm n}_{h\Sigma_n}"]{r} & (\S^q \sm E)^{\sm n}_{h\Sigma_n} \arrow[equal]{r} & \S^{q\rho}_{h\Sigma_n} \sm E^{\sm n}_{h\Sigma_n} \arrow[densely dotted]{u}[description]{\mu_{n,q}},
+(\Susp^\infty_+ X)^{\sm n}_{h\Sigma_n} \arrow["f^{\sm n}_{h\Sigma_n}"]{r} & (\S^q \sm E)^{\sm n}_{h\Sigma_n} \arrow{r} & \S^{q\rho}_{h\Sigma_n} \sm E^{\sm n}_{h\Sigma_n} \arrow[densely dotted]{u}[description]{\mu_{n,q}},
 \end{tikzcd}
 \end{center}
 where \(\S^\rho\) is the \index{equivariant spectrum!representation sphere}representation sphere for the permutation representation of \(\Sigma_n\).  Such a system of factorizations is called an \(H_\infty^1\)--ring structure on \(E\)---but in practice these are very uncommon,\footnote{In fact, they can only appear on \(H\F_2\)--algebras~\cite[Section VII.6.1]{BMMS}.} and instead a subsystem of factorizations for every \(q \equiv 0 \pmod d\) is called an \(H_\infty^d\)--ring structure~\cite[Definition I.4.3]{BMMS}.  In the same way, these give rise to external and internal power operations on cohomology classes of those negative degrees which are divisible by \(d\).  We will mostly concern ourselves with the theory of \(H_\infty\)--ring spectra in this section, but we will eventually work with \(H_\infty^2\)--ring spectra in the intended application, and so we now describe a naturally occuring such structure on \(MU\)\index{H infty ring spectrum@\(H_\infty\)--ring spectrum!H infinity 2 on MU@\(H_\infty^2\)--structure on \(MU\)}.
@@ -688,7 +688,7 @@ We now return to the setting of a general \(H_\infty\)--ring spectrum \(E\).  So
 \arrow[Rightarrow,to path=(X) -- (E), "f"]{}
 \end{tikzcd}
 \end{center}
-This construction is useful when studying composites of power operations: the group \(\Sigma_n \wr \Sigma_k\) acts naturally on \((E^{\sm k})^{\sm n}\), and indeed there is an equivalence \[P^{\Sigma_n} \circ P^{\Sigma_k} = P^{\Sigma_n \wr \Sigma_k}.\]  In order to understand these modified power operations more generally, we are motivated to study such maps \(\phi\) more seriously.  Some basic constructions are summarized in the following definition:
+This construction is useful when studying composites of power operations: the group \(\Sigma_k \wr \Sigma_n \subseteq \Sigma_{nk}\) acts naturally on \((E^{\sm k})^{\sm n} \simeq E^{\sm nk}\), and indeed there is an equivalence \[P^{\Sigma_n} \circ P^{\Sigma_k} = P^{\Sigma_k \wr \Sigma_n}.\]  In order to understand these modified power operations more generally, we are motivated to study such maps \(\phi\) more seriously.  Some basic constructions are summarized in the following definition:
 \begin{definition}[{\cite[Sections XI.3 and XXV.3]{MayAlaskaNotes}, cf.\ also \cite[Section 6.1.6]{LurieHA}}]
 Let \(\phi\co G \to H\) be an inclusion of finite groups and let \(F\) be an \(H\)--spectrum.  There is a natural map of homotopy colimits \(\phi_*\co F_{hG} \to F_{hH}\) which induces a \index{restriction}\textit{restriction map} on cohomology: \[\Res_G^H\co E^0 F_{hH} \to E^0 F_{hG}.\]  The spectrum \((H/G) \times F\) considered as a \(H\)--spectrum with the diagonal \(H\)--action has the property \(((H/G) \times F)_{hH} = F_{hG}\), and the \(G\)--equivariant averaging map \[F \xrightarrow{\displaystyle \sum_{[h] \in H/G} [h] \times (-)} (H/G) \times F\] passes on homotopy orbits to the \index{norm!equivariant}\textit{additive norm map} \(N_G^H\co F_{hH} \to F_{hG}\), which again induces a map on cohomology classes \[\Tr_G^H\co E^0 F_{hG} \to E^0 F_{hH}\] called the \textit{transfer map}.  The composite \(\phi_* \circ N_G^H\) acts by multiplication by the index \(|H/G|\), and hence this is also true of \(\Res^H_G \Tr^H_G\).
 \end{definition}
@@ -718,7 +718,7 @@ Given any identification \(P \simeq \coprod_K (* \mmod K)\), there is a \index{p
 \end{lemma}
 
 \begin{corollary}
-For any subgroup \(G \le \Sigma_n\), there is a congruence \[P^G(f + g) \equiv P^G(f) + P^G(g) \pmod{\text{transfers from proper subgroups of \(G\)}}.\]
+For a transitive subgroup \(G \le \Sigma_n\), there is a congruence \[P^G(f + g) \equiv P^G(f) + P^G(g) \pmod{\text{transfers from proper subgroups of \(G\)}}.\]
 \end{corollary}
 \begin{proof}
 Note that \(P^G\) can be defined by means of restriction: \(P^G = \Res^{\Sigma_n}_G P^{\Sigma_n}\).  We can hence reuse the previous binomial formula: \[P^G(f + g) = \Res^{\Sigma_n}_G P^{\Sigma_n}(f + g) = \sum_{i+j = n} \Res^{\Sigma_n}_G \Tr_{\Sigma_i \times \Sigma_j}^{\Sigma_n}\left(P^{\Sigma_i}(f) \cdot P^{\Sigma_j}(g)\right).\]  In the cases \(i = 0\) or \(j = 0\), the transfer map is the identity operation, and we recover \(P^G(g)\) and \(P^G(f)\) respectively.  In all the other terms, the interchange lemma lets us pull the transfer to the outside.
@@ -919,7 +919,7 @@ P^{C_n}(x) = c_n(\Delta_{hC_n}^* \L(n)) & = e\left( \bigoplus_{j=0}^{n-1} \pi_1^
 \end{align*}
 Here \(x\) is still the \(1\)\textsuperscript{st} Conner--Floyd--Chern class of \(\L\) and \(t\) is the Euler class of \(\eta\).  We now try to make sense of this product expression for \(c_n(\Delta_{hC_n}^* \L(n))\) by expanding it in powers of \(x\) and identifying its component pieces.
 \begin{lemma}\label{AjAndBjAreInTheFGLSubring}
-There is a series expansion in \(MU^* BU(1)_{hC_n}\): \[P^{C_n}(x) = \prod_{j=0}^{n-1} (x +_{MU} [j]_{MU}(t)) = w + \sum_{j=1}^\infty a_j(t) x^j,\] where \(a_j(t)\) is a series with coefficients in the subring \(C \subseteq MU_*\) spanned by the coefficients of the natural \(MU\)--formal group law.  The leading term \[w = e(\rho) = \prod_{j=0}^{n-1} e(\eta^{\otimes j}) = \prod_{j=0}^{n-1} [j]_{MU} (e(\eta)) = (n-1)! t^{n-1} + \sum_{j \ge n} b_j t^j\] is the Euler class of the reduced permutation representation, and, again, the elements \(b_j\) lie in the subring \(C\). \qed
+There is a series expansion in \(MU^* BU(1)_{hC_n}\): \[P^{C_n}(x) = \prod_{j=0}^{n-1} (x +_{MU} [j]_{MU}(t)) = w + \sum_{j=1}^\infty a_j(t) x^j,\] where \(a_j(t)\) is a series with coefficients in the subring \(C \subseteq MU_*\) spanned by the coefficients of the natural \(MU\)--formal group law.  The leading term \[w = e(\overline \rho) = \prod_{j=0}^{n-1} e(\eta^{\otimes j}) = \prod_{j=0}^{n-1} [j]_{MU} (e(\eta)) = (n-1)! t^{n-1} + \sum_{j \ge n} b_j t^j\] is the Euler class of the reduced permutation representation, and, again, the elements \(b_j\) lie in the subring \(C\). \qed
 \end{lemma}
 
 We now turn from the \(1\)\textsuperscript{st} universal case to our original goal: understanding the action of \(P^{C_n}\) on each of the canonical classes \[u_m\co MU(m) \to MU.\]  We approach this via the splitting principle by first rewriting the formula in \Cref{AjAndBjAreInTheFGLSubring} in a form amenable to wrangling direct sums with the Cartan formula:
@@ -985,8 +985,8 @@ Our conclusion, then, is that \(P^{C_n}\) is \emph{almost} naturally expressible
 
 With \Cref{QuillensKeyRelation} in hand, we will now deduce Quillen's major structural theorem about \(MU_*\).  We will preserve the notation used in \Cref{AjAndBjAreInTheFGLSubring} and \Cref{QuillensKeyRelation}:
 \begin{itemize}
-\item \(\rho\) is the reduced regular representation of \(C_n\), which coincides with its reduced permutation representation, and \(w = e(\rho)\) is its Euler class.
-\item \(\eta\co BC_n \to BU(1)\) is the line bundle associated to the inclusion \(C_n \le U(1)\), and \(t = e(\eta)\) is its Euler class.
+\item \(\overline \rho\) is the reduced regular representation of \(C_n\), which coincides with its reduced permutation representation, and \(w = e(\overline \rho)\) is its Euler class.
+\item \(\eta\co BC_n \to BU(1)\) is the line bundle associated to a choice of generating character \(C_n \to U(1)\), and \(t = e(\eta)\) is its Euler class.
 \item \(C\) is the subring of \(MU_*\) generated by the coefficients of the formal group law associated to the identity complex--orientation.
 \end{itemize}
 In the course of working out the main Theorem, we will want to make use of the following property of the class \(t\).
